if(BUILD_GPU_TESTS)
    find_package(Gtest REQUIRED)
    include_directories(SYSTEM ${GTEST_INCLUDE_DIRS} ${GTEST_SRC_DIR})
    
    set(the_test_target test_gpu_keypoints)

    get_filename_component(DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
    get_filename_component(INC1 "${DIR}/../../../io/include" REALPATH)
    get_filename_component(INC2 "${DIR}/../../../keypoints/include" REALPATH)
    get_filename_component(INC3 "${DIR}/../../../kdtree/include" REALPATH)
    get_filename_component(INC4 "${DIR}/../../../visualization/include" REALPATH)
    get_filename_component(INC5 "${DIR}/../../../common/include" REALPATH)
    get_filename_component(INC6 "${DIR}/../../../search/include" REALPATH)
    get_filename_component(INC7 "${DIR}/../../../octree/include" REALPATH)
    get_filename_component(INC8 "${DIR}/../../../features/include" REALPATH)
    
    FILE(GLOB test_src *.cpp *.hpp)
    include_directories(${INC1} ${INC2} ${INC3} ${INC4} ${INC5} ${INC6} ${INC7} ${INC8})
    PCL_ADD_TEST(gpu_keypoints_test ${the_test_target} FILES ${test_src} LINK_WITH pcl_gtest pcl_gpu_containers pcl_gpu_octree pcl_gpu_keypoints pcl_io pcl_features pcl_visualization pcl_common ARGUMENTS "${PCL_SOURCE_DIR}/test/office_chair_model.pcd")
    add_dependencies(${the_test_target} pcl_gpu_octree pcl_gpu_containes pcl_gpu_features pcl_gpu_keypoints pcl_io pcl_features pcl_visualization pcl_common pcl_gtest)    
endif(BUILD_GPU_TESTS)
